# MAX

./: .env  .gitignore  CHATGPT_PROMPT.md  CURSOR_AGENT_PROMPTS_GENERATOR.md  DESKTOP_BUILD.md  FRONTEND_VERIFICATION.md  HOW_TO_SEE_AGENT_REASONING.md  PHASE1_VERIFICATION_GUIDE.md  QUICK_DEV_START.md  QUICK_START.md  QUICK_VERIFY.md  README.md  RUNNING_SERVERS.md  START_SERVERS.md  TEST_AGENT_CREATION.md  VERIFICATION_CHECKLIST.md  VERIFY_MANAGER_DECISION_LOGIC.md  next-task.md  package-lock.json  package.json  system-overview.md  temp_api.ts  temp_api_committed.ts
backend/: .env.example  ARCHITECTURE_ANALYSIS.md  README.md  index.js  nodemon.json  package-lock.json  package.json  requirements.txt  server.js
contracts/: ARCHITECTURE_ANALYSIS.md  MAX.sol  MaxRegistry.sol  README.md  hardhat.config.js  hardhat.config.mjs  package-lock.json  package.json
docs/: DEVELOPMENT.md  DISCUSSION_LIFECYCLE_STATUS.md  DISCUSSION_ROOMS_GUIDE.md  MANAGER_AGENT_VERIFICATION.md  MANUAL_TESTING_GUIDE.md  MNEE_INTEGRATION_GUIDE.md  PHASE1_STATUS.md  PHASE1_VERIFICATION.md  PHASE2_VERIFICATION_REPORT.md  PHASE3_VERIFICATION.md  PHASE4_VERIFICATION.md  README.md  RESEARCH_AGENT_VERIFICATION.md  VERIFICATION_REPORT_INDEX.md  api_contract.md  architecture.md  phase1-verification.md  phase2-full-verification.md  phase2-verification-latest.md  phase2-verification.md  phase2_reverification_report_2025-11-27_18-08-52.md  phase4-reverification.md  phase4-verification.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
(+1890 files in other folders)
