[package]
name = "max-desktop"
version = "1.0.0"
description = "MAX Desktop Application"
authors = ["MAX Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "windows7-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
which = "4.4"

[profile.dev-release]
inherits = "release"
opt-level = 1  # Faster compilation than full release (opt-level 3)
strip = false  # Skip stripping for faster builds

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

